<resources>
    <string name="app_name">Coins</string>
    <string name="login">Login</string>
    <string name="text_email">Email</string>
    <string name="email">Your email...</string>
    <string name="text_password">Password</string>
    <string name="password">**********</string>
    <string name="login_button">Login</string>
    <string name="emailIcon">User Icon</string>
    <string name="passwordIcon">Password Icon</string>
    <string name="newAcct"><u>Create new account</u></string>
    <string name="signup">Sign Up</string>
    <string name="verify">Verify Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="market">Market</string>
    <string name="favorite">Favorites</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="global">Global Market Cap</string>
    <string name="volume">24H Volume</string>
    <string name="account">My Account</string>
    <string name="changeEmail">Change Email</string>
    <string name="changePassword">Change Password</string>
    <string name="contact">Contact Us</string>
    <string name="terms">Terms of Service</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="yourCurrentEmail">Your current email</string>
    <string name="yourNewEmail">Your new email</string>
    <string name="currentEmail">Current Email</string>
    <string name="newEmail">New Email</string>
    <string name="changeButton">Save</string>
    <string name="yourCurrentPasword">Your current password</string>
    <string name="yourNewPassword">Your new password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="accountEmail">Email:</string>
    <string name="version">Version:</string>
    <string name="versionNo">1.0.0</string>
    <string name="logOut">Log Out</string>
    <string name="addFav">Add to Favorites</string>
    <string name="removeFav">Remove</string>
    <string name="numb">#</string>
    <string name="coin">COIN</string>
    <string name="price">PRICE</string>
    <string name="marketCap">MARKET CAP</string>
</resources>