<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C90F3"
    tools:context=".Login"
    android:orientation="vertical"
    android:weightSum="8">


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="4"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            tools:layout_marginTop="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutEmail"
                android:layout_width="334dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toTopOf="@+id/wrongEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmail">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_box"
                    android:ems="10"
                    android:fontFamily="monospace"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingStart="60dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="14dp"
                    android:contentDescription="@string/emailIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/email" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/text_email"
                android:textColor="#0174C6"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayoutEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/wrongEmail"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text=" "
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutEmail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutPassword"
                android:layout_width="334dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toTopOf="@+id/wrongPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPassword">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_box"
                    android:ems="10"
                    android:fontFamily="monospace"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="60dp"
                    android:paddingTop="2dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/passwordIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="14dp"
                    android:contentDescription="@string/passwordIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/password" />

                <ImageView
                    android:id="@+id/togglePasswordVisibility"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_below="@id/password"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="Eye icon to toggle password visibility"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/password_invisible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/text_password"
                android:textColor="#0174C6"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayoutPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:layout_constraintTop_toBottomOf="@+id/textViewEmail" />



            <TextView
                android:id="@+id/wrongPassword"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text=" "
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutExtra"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="122dp"
                android:layout_height="52dp"
                android:backgroundTint="#3C90F3"
                android:fontFamily="monospace"
                android:text="@string/login_button"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/newAcct"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/newAcct"
                android:layout_width="226dp"
                android:layout_height="48dp"
                android:fontFamily="monospace"
                android:minHeight="48dp"
                android:onClick="onCreateNewClick"
                android:text="@string/newAcct"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/material_dynamic_neutral50"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>