<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C90F3"
    tools:context=".ChangeEmail"
    android:orientation="vertical"
    android:weightSum="8">


    <TextView
        android:id="@+id/changeEmailTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/changeEmail"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="4"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:weightSum="2.75">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/currentEmail"
                android:layout_width="334dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_box"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/yourCurrentEmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/wrongCurrentEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCurrentEmail" />

            <TextView
                android:id="@+id/textViewCurrentEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/currentEmail"
                android:textColor="#0174C6"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/currentEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/wrongCurrentEmail"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text=" "
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentEmail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/wrongNewEmail"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text=" "
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newEmail" />

            <TextView
                android:id="@+id/textViewNewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/newEmail"
                android:textColor="#0174C6"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/newEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/newEmail"
                android:layout_width="334dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_box"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/yourNewEmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/wrongNewEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNewEmail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/changeEmailButton"
                android:layout_width="122dp"
                android:layout_height="52dp"
                android:backgroundTint="#3C90F3"
                android:fontFamily="monospace"
                android:onClick="onChangeClick"
                android:text="@string/changeButton"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>